# terraria-discord-bridge

./: .config.toml  .gitignore  Cargo.toml  README.md  schema.sql  sqlx-data.json
.cargo/: config.toml
.github/workflows/: rust.yml
.sqlx/: query-02b28aa3c7e9a67f50823bec143252495a47dbf01aa93a6df40d34794a7a2c86.json  query-0a0e7c04670a2ff3ebfd6ee0a53d020960acc48c6d0abed23e278a3eea7ca90a.json  query-32c7e7726bb46a2f45d3011b351392017d4814ac656ef2e2722010b0a92cf120.json  query-6e18f362e7bc2d6c7ebeacd9b5c791bed8b7d08dddbe9b05ee2d4f2c4cb01496.json  query-9ef44b7c406976ed11a9fab5acb04d1889d572028c10d71592dcf0567bd06360.json  query-cdd111bae19b2a5078d0808f9cf09988a9d9220b410743e16a8c8be3180dd7ae.json
src/: commands.rs  handler.rs  main.rs  strings.rs  terraria_pcap.rs
src/strings/: announcement.rs  death_source.rs  death_text.rs  death_text_generic.rs  game.rs  item_name.rs  legacy_misc.rs  legacy_multiplayer.rs  legacy_world_gen.rs  misc.rs  npc_name.rs  projectile_name.rs
