[package]
name = "terraria-discord"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.0", features = ["termination"] }
regex = "1"
serenity = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
