[package]
name = "terraria-discord"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
pcap = { path = "../pcap" }
regex = "1.6.0"
serenity = {version = "0.11.5", default-features = false, features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "rustls_backend", "standard_framework"]}
serde = { version = "1.0", features = ["derive"] }
sqlx = {version = "0.6.2", default-features = false, features = ["offline", "runtime-tokio-rustls", "macros", "postgres"]}
tokio = {version = "1.20.1", features = ["full"]}
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
