[package]
name = "terraria-discord"
version = "0.1.0"
authors = ["heydabop <heydabop@gmail.com>"]
edition = "2024"
rust-version = "1.93"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
pcap = { git = "https://github.com/heydabop/pcap.git" }
regex = "1.10"
serenity = {version = "0.12.5", default-features = false, features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "rustls_backend", "standard_framework"]}
serde = { version = "1.0", features = ["derive"] }
sqlx = {version = "0.8.6", default-features = false, features = ["chrono", "runtime-tokio-rustls", "macros", "postgres"]}
tokio = {version = "1.37.0", features = ["full"]}
toml = "0.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
poise = "0.6.1"
